--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_LUA has improved support for FreeBSD. Further details can be found at
+  <https://savannah.gnu.org/patch/?8318>.
+
   The new macros AX_CXX_HAVE_BAD_FUNCTION_CALL, AX_CXX_HAVE_BIND,
   AX_CXX_HAVE_BIT_AND, AX_CXX_HAVE_BIT_OR, AX_CXX_HAVE_BIT_XOR,
   AX_CXX_HAVE_CREF, AX_CXX_HAVE_FUNCTION, AX_CXX_HAVE_HASH,
