--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_EXT has been extended to deal with a situation where
+  AX_GCC_X86_CPUID(0x00000001) returns 'unknown'. Further details can be found
+  at <http://savannah.gnu.org/patch/?8321>.
+
   AX_ZONEINFO has improved support for AIX. Further details can be found at
   <http://savannah.gnu.org/patch/?8313>.
 
