--- a/NEWS
+++ b/NEWS
@@ -20,8 +20,9 @@
   AX_ZONEINFO has improved support for AIX. Further details can be found at
   <http://savannah.gnu.org/patch/?8313>.
 
-  AX_LUA has improved support for FreeBSD. Further details can be found at
-  <http://savannah.gnu.org/patch/?8318>.
+  The set of search paths checked by AX_LUA has been extended, mostly in an
+  effort to support FreeBSD and OpenBSD: <http://savannah.gnu.org/patch/?8318>
+  and <http://savannah.gnu.org/patch/?8355> have further details.
 
   The new macros AX_CXX_HAVE_BAD_FUNCTION_CALL, AX_CXX_HAVE_BIND,
   AX_CXX_HAVE_BIT_AND, AX_CXX_HAVE_BIT_OR, AX_CXX_HAVE_BIT_XOR,
@@ -32,7 +33,7 @@
 
   M4sugar and M4sh added to AX_PROG_JAR, AX_PROG_JAVA, AX_PROG_JAVAC, and
   AX_PROG_JAVADOC. Also fixed a path discrepancy with AX_JAVA_OPTIONS. See
-  <https://savannah.gnu.org/patch/index.php?8279> for further details.
+  <http://savannah.gnu.org/patch/index.php?8279> for further details.
 
   The "mandatory" option in AX_CXX_COMPILE_STDCXX_11 has been fixed, and
   support for Gentoo's hardened GCC has been improved. Further details are at
