README: give file sizes in SI units

--- a/README
+++ b/README
@@ -26,10 +26,10 @@ Downloads
 
 Here are the compressed sources:
 
-* autoconf-archive-2014.02.28.tar.gz_   (1.1 MB)
-* autoconf-archive-2014.02.28.tar.bz2_  (691 KB)
-* autoconf-archive-2014.02.28.tar.xz_   (528 KB)
-* autoconf-archive-2014.02.28.tar.lz_   (527 KB)
+* autoconf-archive-2014.02.28.tar.gz_   (996 kB)
+* autoconf-archive-2014.02.28.tar.bz2_  (725 kB)
+* autoconf-archive-2014.02.28.tar.xz_   (551 kB)
+* autoconf-archive-2014.02.28.tar.lz_   (550 kB)
 
 Here are the GPG detached signatures:
 
