AX_BERKELEY_DB(_CXX): add --with-libdb option
Main idea this patch is a specified a location where was installed libDB. On my
OS X system DB was installed to /usr/local/opt/berkeley-db4 when I did it by
home-brew and without this path I can't use this macross.

Submitted in <https://savannah.gnu.org/patch/index.php?8416>.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_BERKELEY_DB(_CXX): add --with-libdb option so that this macros works on
+  OSX with home-brew installed version of BDB. Submitted in
+  <https://savannah.gnu.org/patch/index.php?8416>.
+
   AX_CXX_HAVE_PLACEHOLDERS: check if std::placeholders is defined in
   <functional>. Submitted it <https://savannah.gnu.org/patch/index.php?8414>.
 
