AX_HAVE_QT: auto-detect Qt 5 by querying $PATH and qmake
The old logic for detecting Qt did not work for newer versions of Qt,
nor did it work on newer Debian/Ubuntu because of multiarch. I've
replaced the old hacks and heuristics with clean code that uses a Qt 5
pro file to detect Qt's parameters from $PATH and qmake. Qt 4 and
earlier do not support this kind of introspection, but any version of
Qt can still be used by explicitly specifying its parameters.

Submitted in <https://savannah.gnu.org/patch/index.php?8486>.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_HAVE_QT: auto-detect Qt 5 by querying $PATH and qmake. Submitted in
+  <https://savannah.gnu.org/patch/index.php?8486>.
+
   AX_CHECK_ENABLE_DEBUG: add an --enable-debug option which defines an
   ENABLE_DEBUG cpp variable if set. Submitted in
   <https://savannah.gnu.org/patch/index.php?8452>.
