Bug fix and improvements to ax_f90_library.m4.
1) The message uses a lower case "f" for the word fortran. However
   most other autoconf macros use "F".

2) The search path prepends $prefix, yet does not check to see
   if this "NONE" (the default). When it is NONE, the find command
   complains (as a directory called NONE normally does not exist).

3) Removed a white space between the "-L" and the directory for
   the LDFLAGS search path.

4) The "action-found" and "action-not-found" logic was incorrect.
   The default test is for not found, which would execute the users
   supplied found action. Swapped these around.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_F90_LIBRARY: several bug fixes and improvements. Further details are at
+  <https://savannah.gnu.org/patch/?8500>.
+
   AX_LUA: fix initialization of ac_cv_header_lua_h. Further details are at
   <https://savannah.gnu.org/patch/?8505>.
 
