--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_TLS: fix quoting problem.
+
   AX_F90_LIBRARY: several bug fixes and improvements. Further details are at
   <https://savannah.gnu.org/patch/?8500>.
 
