AX_CXX_VAR_PRETTYFUNC: new macro to determine the function name
This new macro determines the best way to get the name of the current function
for different C++-compilers and -dialects (in the spirit of _FILE_ and _LINE_).

The patch also fixes some problems in AX_C_VAR_FUNC.

Submitted in <https://savannah.gnu.org/patch/index.php?8524>.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_CXX_VAR_PRETTYFUNC: new macro to determine the function name.
+
   AX_CC_MAXOPT: default to -O2 for MSVC instead of -O3.
 
   AX_CXX_HAVE_REFERENCE_WRAPPER, AX_CXX_HAVE_BAD_FUNCTION_CALL,
