AX_CC_MAXOPT: default to -O2 for MSVC
Right now, ax_cc_maxopt.m4 ends up falling back onto -O3 when invoked
with MSVC. We should default to -O2 instead.

--- a/NEWS
+++ b/NEWS
@@ -10,7 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
-  AX_CXX_HAVE_REFERENCE_WRAPPER: remove dependency on AX_CXX_NAMESPACES
+  AX_CC_MAXOPT: default to -O2 for MSVC instead of -O3.
+
+  AX_CXX_HAVE_REFERENCE_WRAPPER: remove dependency on AX_CXX_NAMESPACES.
 
   AX_PROG_FLEX has been extended to support OpenBSD.
 
