--- a/NEWS
+++ b/NEWS
@@ -24,8 +24,8 @@
 
   AX_CXX_HAVE_REFERENCE_WRAPPER, AX_CXX_HAVE_BAD_FUNCTION_CALL,
   AX_CXX_HAVE_BIND, AX_CXX_HAVE_BIT_AND, AX_CXX_HAVE_BIT_OR,
-  AX_CXX_HAVE_BIT_XOR, AX_CXX_HAVE_CREF, AX_CXX_HAVE_FUNCTION: remove
-  dependency on AX_CXX_NAMESPACES.
+  AX_CXX_HAVE_BIT_XOR, AX_CXX_HAVE_CREF, AX_CXX_HAVE_FUNCTION,
+  AX_CXX_HAVE_HASH: remove dependency on AX_CXX_NAMESPACES.
 
   AX_PROG_FLEX has been extended to support OpenBSD.
 
