AX_CXX_HAVE_IS_BIND_EXPRESSION: remove dependency on AX_CXX_NAMESPACES

--- a/NEWS
+++ b/NEWS
@@ -25,7 +25,8 @@
   AX_CXX_HAVE_REFERENCE_WRAPPER, AX_CXX_HAVE_BAD_FUNCTION_CALL,
   AX_CXX_HAVE_BIND, AX_CXX_HAVE_BIT_AND, AX_CXX_HAVE_BIT_OR,
   AX_CXX_HAVE_BIT_XOR, AX_CXX_HAVE_CREF, AX_CXX_HAVE_FUNCTION,
-  AX_CXX_HAVE_HASH: remove dependency on AX_CXX_NAMESPACES.
+  AX_CXX_HAVE_HASH, AX_CXX_HAVE_IS_BIND_EXPRESSION: remove dependency on
+  AX_CXX_NAMESPACES.
 
   AX_PROG_FLEX has been extended to support OpenBSD.
 
