AX_CXX_HAVE_REF: remove dependency on AX_CXX_NAMESPACES

--- a/NEWS
+++ b/NEWS
@@ -26,7 +26,7 @@
   AX_CXX_HAVE_BIND, AX_CXX_HAVE_BIT_AND, AX_CXX_HAVE_BIT_OR,
   AX_CXX_HAVE_BIT_XOR, AX_CXX_HAVE_CREF, AX_CXX_HAVE_FUNCTION,
   AX_CXX_HAVE_HASH, AX_CXX_HAVE_IS_BIND_EXPRESSION, AX_CXX_HAVE_IS_PLACEHOLDER,
-  AX_CXX_HAVE_MEM_FN: remove dependency on AX_CXX_NAMESPACES.
+  AX_CXX_HAVE_MEM_FN, AX_CXX_HAVE_REF: remove dependency on AX_CXX_NAMESPACES.
 
   AX_PROG_FLEX has been extended to support OpenBSD.
 
