AX_LIB_HDF5: add support for recognizing HDF5 built with ccache
The ax_lib_hdf5.m4 autoconf macro uses awk to determine which compiler was used
to build HDF5. This fails if HDF5 was built using ccache because "ccache" is
then used as HDF5_CC instead of the actual compiler wrapped by ccache. The
attached patch fixes that.

Submitted in <https://savannah.gnu.org/patch/index.php?8450>.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_LIB_HDF5: add support for recognizing HDF5 built with ccache. Submitted in
+  <https://savannah.gnu.org/patch/index.php?8450>.
+
   AX_CC_MAXOPT: Improve CPUID identification patterns as mentioned in
   patch #8514. Add ICC options added in version 11.0 (which deprecates older
   -xX style options). Add support for latest Intel performance processors
