AX_BOOST_PYTHON: major re-write
See https://savannah.gnu.org/patch/index.php?8540 for details.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_BOOST_PYTHON: several issue have beeen fixed. Further details can be found
+  at <https://savannah.gnu.org/patch/index.php?8540>.
+
   AX_HAVE_QT: Only check $PATH and qmake for Qt variables. The old logic for
   detecting Qt without $PATH or qmake was never very reliable and the last
   change to this macro broke it entirely. If the Qt variables cannot be found
