AX_PERL_MODULE_VERSION: fix typo
Other unfixed issues remain. See <https://savannah.gnu.org/patch/index.php?8507>.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_PERL_MODULE_VERSION: fix a misspelled variable name. Other unfixed issues
+  remain. See <https://savannah.gnu.org/patch/index.php?8507>.
+
   AX_BOOST_PYTHON: several issue have beeen fixed. Further details can be found
   at <https://savannah.gnu.org/patch/index.php?8540>.
 
