README, NEWS: bump version numbers for release

--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2014.10.15 (2014-10-15) [stable]
 
   A brand-new Github mirror of the Archive's Git repository is available at
   <https://github.com/peti/autoconf-archive>. That project allows developers to
