--- a/README
+++ b/README
@@ -28,24 +28,20 @@ Downloads
 
 Here are the compressed sources:
 
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.gz>  (996 kB)
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.bz2> (725 kB)
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.xz>  (551 kB)
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.lz>  (550 kB)
+-   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.10.15.tar.xz>
+-   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.10.15.tar.lz>
 
 Here are the GPG detached signatures:
 
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.gz.sig>
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.bz2.sig>
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.xz.sig>
--   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.02.28.tar.lz.sig>
+-   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.10.15.tar.xz.sig>
+-   <http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2014.10.15.tar.lz.sig>
 
 You can use either of the above signature files to verify that the
 corresponding file (without the .sig suffix) is intact. First, be sure
 to download both the .sig file and the corresponding tarball. Then, run
 a command like this:
 
-    gpg --verify autoconf-archive-2014.02.28.tar.gz.sig
+    gpg --verify autoconf-archive-2014.10.15.tar.xz.sig
 
 If that command fails because you don't have the required public key,
 then run this command to import it:
