--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
 * Noteworthy changes in release 2016.09.16 (2016-09-16) [stable]
 
   The following macros were added: AX_BUILD_DATE_EPOCH, AX_CHECK_X86_FEATURES,
