--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,9 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_DEFINE_SUB_PATH has been marked obsolete as suggested in
+  https://github.com/peti/autoconf-archive/pull/97.
+
 * Noteworthy changes in release 2016.09.16 (2016-09-16) [stable]
 
   The following macros were added: AX_BUILD_DATE_EPOCH, AX_CHECK_X86_FEATURES,
