--- a/NEWS
+++ b/NEWS
@@ -393,7 +393,7 @@
   The new macro AX_PROG_SCALAC provides support for finding a Scala compiler.
   See <http://savannah.gnu.org/patch/index.php?8195> for further details.
 
-  The new macres AX_FIND_HAMCREST and AX_FIND_JUNIT have been added, which
+  The new macros AX_FIND_HAMCREST and AX_FIND_JUNIT have been added, which
   provide support for finding the jars of JUnit and Hamcrest. Please refer to
   <http://savannah.gnu.org/patch/index.php?8196> for further details.
 
