--- a/NEWS
+++ b/NEWS
@@ -518,7 +518,7 @@
   systems. See <http://savannah.gnu.org/patch/?7921> for further details.
 
   The new macro AX_LIB_EV has been added, which checks for libev in a
-  pkg-config-like manner. The purpose of the macro is to unifty behaviour
+  pkg-config-like manner. The purpose of the macro is to unify behaviour
   between distros that come with libev.pc and systems (e.g. upstream) that
   don't. Further details are at <http://savannah.gnu.org/patch/?7938>.
 
