Add character-encoding guideline
* doc/contribute.texi (Macro Format):
Add a blurb on the preferred character encoding
and an example of applying the guideline.

--- a/doc/contribute.texi
+++ b/doc/contribute.texi
@@ -3,6 +3,9 @@
 Each macro in the Archive has an all-upper-case name with the prefix
 @code{AX_}.  The macro is stored in a file with the same name, in lower case,
 and with the suffix @code{.m4}.
+Unless absolutely necessary, the file contents should be in ASCII.
+For example, use apostrophe (U+27) for quoting identifiers
+instead of Unicode quotation mark characters U+2018, U+2019.
 
 The file should begin with a header comment containing three named sections:
 synopsis, description, and license.
