--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,13 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2017.09.28 (2017-09-28) [stable]
+
+  The macros AX_PROG_HELP2MAN, AX_RECURSIVE_EVAL, AX_SUBDIRS_CONFIGURE,
+  AX_ELISP, and AX_PROG_EMACS have been added.
+
+  Various macros have received updates. Please check the ChangeLog file or the
+  history of the git repository for further details.
 
 * Noteworthy changes in release 2017.03.21 (2017-03-21) [stable]
 
